fix pagination color in dark mode

--- a/css/style.css
+++ b/css/style.css
@@ -290,9 +290,9 @@ ul.tags:before {
 .pagination li:first-child {
     margin-left: -5px;
 }
-.pagination li a, .pagination li a:visited {
+.pagination li a, .pagination li span, .pagination li a:visited {
     text-decoration: none;
-    color: #152032;
+    color: #3468bd;
 }
 .pagination li .active, .pagination li a:hover {
     color: #e9e9e8;
@@ -300,7 +300,6 @@ ul.tags:before {
 }
 .pagination li a, .pagination li span {
     padding: 1px 4px;
-    color: #152032;
 }
 .pagination li a {
 }
